# TimelineForVideo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  MODEL_AND_RUNTIME_NOTES.md  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  settings.example.json  start.bat  start.command  start.ps1  stop.bat  stop.command  stop.ps1  timeline-product.json  uninstall.bat  uninstall.command
configs/: docker.json  local.json  runtime.defaults.json
docker/: worker.Dockerfile  worker.gpu.Dockerfile
docs/: ACCEPTANCE_CRITERIA.md  (+19 more)
worker/: pyproject.toml  requirements-audio-models-gpu.txt
worker/src/timeline_for_video_worker/: activity_map.py  api_server.py  audio_analysis.py  audio_model_runner.py  audio_models.py  commands.py  frame_diff_vlm.py  frame_ocr.py  frame_transition_gate.py  items.py  job_runner.py  model_inventory.py  operations.py  pagination.py  probe.py  processor.py  sampling.py  settings.py
worker/src/timelineforvideo_worker/: cli.py  processor.py  settings.py
worker/src/video2timeline_worker/: cli.py  contracts.py  job_store.py  processor.py  screens.py  settings.py  transcribe.py
worker/tests/: test_activity_map.py  test_api_server.py  test_audio_analysis.py  test_audio_models.py  test_commands.py  test_contracts.py  test_eta.py  test_ffmpeg_utils.py  test_frame_diff_vlm.py  test_frame_ocr.py  test_frame_transition_gate.py  test_fs_utils.py  test_items.py  test_job_store.py  test_model_inventory.py  test_operations.py  test_probe.py  test_processor.py  test_sampling.py  test_screens.py  test_settings.py  test_transcribe.py
(+35 files in other folders)
